--- a/partials/about.html
+++ b/partials/about.html
@@ -1,1 +1,38 @@
-<h1> ABOUT US PAGE PLACEHOLDER </h1>
+<div id="about_partial" class="partial">
+    <h1 id="my_story_title"> MY STORY </h1>
+    <img class="about_img" src="img/abby1.jpg">
+    <h4> Subtitle 1 </h4>
+    <p>Yuccie exercitation incididunt, chia cupidatat knausgaard green juice pug brunch eiusmod crucifix.
+        Eu nesciunt synth ethical, four dollar toast direct trade fanny pack dreamcatcher 3 wolf moon hexagon asymmetrical
+        tousled elit excepteur health goth. Dreamcatcher enamel pin duis lyft aute, brunch placeat esse chillwave.
+        Kitsch deserunt affogato, everyday carry YOLO elit ut migas beard. Nesciunt lomo velit, put a bird on it freegan
+        placeat normcore hoodie cornhole meditation kickstarter raw denim kinfolk. Readymade dolore voluptate, retro
+        meditation williamsburg bitters wayfarers nesciunt ugh pickled meh literally. Roof party swag quis, plaid cred
+        cray aesthetic assumenda blue bottle.
+        <br><br>
+        Artisan gluten-free ullamco, vaporware fixie snackwave sustainable
+        labore. Tumblr microdosing swag, salvia ennui tote bag vero. Magna delectus literally, distillery sustainable
+        tote bag reprehenderit enamel pin culpa iPhone health goth pok pok pop-up chartreuse. Literally vice hammock qui,
+        ea trust fund eu wolf gentrify mlkshk. Yr hammock pop-up, man bun duis aute adipisicing authentic commodo aliqua.
+        Banjo fingerstache excepteur bitters. Excepteur nihil chartreuse culpa, art party normcore echo park kitsch man bun
+        keffiyeh.
+    </p>
+
+    <img class="about_img" src="img/waffle_tumblr.jpg">
+    <h4> Subtitle 2 </h4>
+    <p>Cardigan keffiyeh chillwave pariatur laboris, pop-up glossier voluptate vice poke pug microdosing ullamco occupy.
+        90's ullamco iceland brunch beard semiotics sartorial. Sint chambray single-origin coffee mixtape. Schlitz eu ex
+        hot chicken. Meh master cleanse fanny pack, consectetur disrupt ut snackwave chicharrones. Eiusmod do vexillologist,
+        tumblr prism austin nihil twee disrupt taxidermy vegan. Paleo green juice waistcoat portland.
+        <br><br>
+        Heirloom sint laboris everyday carry, vape tousled culpa kinfolk kale chips. Excepteur nihil brooklyn heirloom.
+        Selvage PBR authentic minim. Consequat pitchfork chambray trust fund 3 wolf moon. Fixie flannel labore gentrify
+        occupy, blog dolore semiotics selvage ad sed succulents raw denim keytar brooklyn. Exercitation pug mixtape selfies,
+        next level culpa fanny pack eu mumblecore hexagon deserunt. La croix lo-fi microdosing, williamsburg vinyl raw denim
+        fingerstache thundercats pitchfork.
+    </p>
+
+    <img class="about_img" src="img/waffle_brunch.jpg">
+    <h4> Have a Question? </h4>
+    <p> I'd love to hear from you! Email me at <a href="mailto:abby@maplestreetwaffles.com">abby@maplestreetwaffles.com</a>. </p>
+</div>
