--- a/partials/home.html
+++ b/partials/home.html
@@ -1,3 +1,5 @@
-<div id="home_text">
-    <h1 id="home_title"> Maple <br> Street <br> Waffles </h1>
+<div id="home_partial">
+    <div id="home_text">
+        <h1 id="home_title"> Maple <br> Street <br> Waffles </h1>
+    </div>
 </div>
