--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Ovo);
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
 
 html {
   padding: 0;
@@ -16,6 +17,15 @@ body {
 
 h1,h2,h3,h4,h5,h6 {
   font-family:Ovo;
+}
+
+a {
+    color: #00A1DF;
+    text-decoration: none;
+}
+
+.partial {
+    padding-top: 65px;
 }
 
 #copyright-container {
@@ -44,6 +54,9 @@ h1,h2,h3,h4,h5,h6 {
 /*     HEADER CSS      */
 /* =================== */
 #header {
+    position: absolute;
+    top: 0;
+    width: 100%;
     height: 65px;
     border-bottom-style: solid;
     border-bottom-color: #E5E5E5;
@@ -81,10 +94,18 @@ h1,h2,h3,h4,h5,h6 {
 /* HOME CSS */
 /* =================== */
 
+#home_partial {
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: bottom;
+    background-image: url(../img/home_bg.jpg);
+}
+
 #home_text {
     position: absolute;
-    top: 20%;
-    right: 25%;
+    top: 15%;
+    right: 12%;
     color: #555;
 }
 
@@ -168,6 +189,46 @@ h1,h2,h3,h4,h5,h6 {
     color: #f3f3f3;
     font-size: 12px;
 }
+
+/* ======================= */
+/*          ABOUT          */
+/* ======================= */
+ #about_partial {
+     padding-left: 20%;
+     padding-right: 20%;
+     padding-bottom: 50px;
+ }
+
+ #about_partial p {
+     font-family: Montserrat;
+     color: #555;
+     line-height: 20px;
+     letter-spacing: .5px;
+     font-weight: lighter;
+ }
+
+ #about_partial h4 {
+     font-family: Montserrat;
+     color: #555;
+     font-size: 24px;
+     line-height: 30px;
+     letter-spacing: 1px;
+     font-weight: 200;
+ }
+
+ #my_story_title {
+     margin-top: 35px;
+     margin-bottom: 30px;
+     width: 100%;
+     text-align: center;
+     font-family: 'Shadows Into Light', cursive;
+ }
+
+ .about_img {
+     width: 100%;
+     margin-top: 20px;
+     margin-bottom: 20px;
+ }
 
 
 /* ======================= */
