--- a/partials/products.html
+++ b/partials/products.html
@@ -1,13 +1,15 @@
-<div id="products_header">
-    <h3 class="header_link" ng-repeat="waffle in waffles" ng-click="waffleClicked(waffle)" ng-class="{selected: activeWaffle == waffle}">{{waffle.name}}</h3>
-</div>
-<div id="product_partial">
-    <div id="product_view_window">
-        <img id="product_image" ng-src="{{activeWaffle.img_url}}">
-        <div id="product_info_container">
-            <h2 id="product_name"> {{activeWaffle.name}} Waffle </h2>
-            <p id="product_description"> {{activeWaffle.description}} </p>
-            <div id="buy_button"> <h2> Buy now </h2> </div>
+<div class="partial">
+    <div id="products_header">
+        <h3 class="header_link" ng-repeat="waffle in waffles" ng-click="waffleClicked(waffle)" ng-class="{selected: activeWaffle == waffle}">{{waffle.name}}</h3>
+    </div>
+    <div id="product_partial" animate-on-change="activeWaffle">
+        <div id="product_view_window">
+            <img id="product_image" ng-src="{{activeWaffle.img_url}}">
+            <div id="product_info_container">
+                <h2 id="product_name"> {{activeWaffle.name}} Waffle </h2>
+                <p id="product_description"> {{activeWaffle.description}} </p>
+                <div id="buy_button"> <h2> Buy now </h2> </div>
+            </div>
         </div>
     </div>
 </div>
